@@ -36,7 +36,9 @@ Design questions ?
 [X] Fix the status bar messages while naviating the edit,view & documents
     menu
 [X] Add status barr message for the Plugins menu.
-[ ] Some menus are not beeing translated. the ones with N_("Menu");
+[ ] problems with translations .
+[ ] fix the problem when using MDI toplevel window
+
 
 [ ] Try to fix the line & column pos
     *** maybe the next text widget will fix this.***
@@ -110,6 +112,7 @@ Design questions ?
 [X] When reverting big files, makes the window scroll.
 [X] Implement Landscape printing
 [X] Show status bar in the Settings menu is not working
+[ ] status bar is crashing gedit when using toplevel mdi window settings.
 
 ** Jason and Chema **
 [X] Seek and destroy all memory leaks
