@@ -1,5 +1,10 @@
 2000-06-16  Chema Celorio  <chema@celorio.com>
 
+	* window.c (gedit_window_set_status_bar): fix
+	( still has problems with Mdi_mode=TOP_level)
+
+	* gedit.c (main): change the order of initialization
+
 	* view.c (gedit_view_get_position): add sanity check
 
 	* file.c (gedit_file_open_ok_sel): fix a crash
